# AnshLamber2

./: main.py  pyproject.toml
CH-1/: Basic_1.ipynb
CH-2/: chain.ipynb
CH-2/exercise/: exercise.ipynb
CH-3/ReAct-Agent/: agents.py
CH-3/ReAct-Agent/atient-assessment-agent/: tool.py
LANGGRAGPH/: GraphVLoppongGraph.ipynb  class1.ipynb  complex.ipynb  mutiple-imput.ipynb
LANGGRAGPH/exercises/: exercise1.ipynb
LANGGRAGPH/exercises/LLMIntegration/: Agent_Bot.py  Memory_agent.py  ReACT.py
logs/: logging.txt
medical_agent_project/: agent.py  main.ipynb  models.py  tools.py
python_classes/: utils.py  variable_guard.ipynb
