[project]
name = "anshlamber2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel",
    "jupyter",
    "langchain>=1.2.7",
    "langchain-openai",
    "load-dotenv>=0.1.0",
    "openai>=2.16.0",
    "python-dotenv",
]
